# angel-one-mcp

./: .env  .gitignore  .gitmodules  PROGRESS.md  README.md  UPSTOX_REQUIREMENTS.md  UPSTOX_SETUP.md  api.py  pyproject.toml  requirements.txt  test_credentials.py  test_upstox_credentials.py  test_upstox_setup.py  upstox_api.py  upstox_credentials_template.py
