[project]
name = "angelone-mcp"
version = "0.1.0"
description = "Model Context Protocol implementation for Angel One trading platform, with Upstox integration planned"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "logzero>=1.7.0",
    "mcp[cli]>=1.6.0",
    "pyotp>=2.9.0",
]
